# mcp-rag-test

./: .env.example  .gitignore  README.md  project_structure.md  pyproject.toml  requirements.txt
data/mcp_docs/: gru.md  강화학습.md  인공지능.md
data/preprocessed/: GPT (언어 모델).txt  강화 학습.txt  게이트 순환 유닛.txt  기계 학습.txt  딥 러닝.txt  순환 신경망.txt  알파고.txt  인공지능.txt  장단기 메모리.txt  트랜스포머 (기계 학습).txt  합성곱 신경망.txt
data/rag_docs/: alphago.txt  cnn.txt  gpt.txt  gru.txt  lstm.txt  rnn.txt  transformer.txt  강화학습.txt  딥러닝.txt  머신러닝.txt  인공지능.txt
data/raw/: GPT (언어 모델).md  기계 학습.md  딥 러닝.md  장단기 메모리.md  트랜스포머 (기계 학습).md  합성곱 신경망.md
data/vectordb/: chroma.sqlite3
docs/: data_format.md  mcp_setup.md  rag_usage.md
mcp-server/: MCP_README.md  mcp_config.json  mcp_rag_server.py  pyproject.toml  requirements.txt  test_mcp_server.py
mcp_server/: __init__.py  requirements_mcp.txt  server.py
mcp_server/config/: __init__.py  mcp_config.py
mcp_server/handlers/: __init__.py  file_handler.py  search_handler.py
mcp_server/tools/: __init__.py  document_reader.py  knowledge_tool.py  search_tool.py
rag/: README.md  __init__.py  build_vectordb.py  chat_demo.py  rag_gpt_system.py  rag_system.py  requirements_rag.txt  search_demo.py  vector_store.py
rag/config/: __init__.py  rag_config.py
rag/src/: __init__.py  (+5 more)
scripts/: download_wiki_data.py  run_mcp_server.py  setup_all.py  test_setup.py
shared/: __init__.py  config.py  data_parser.py  text_processor.py
util/: config.py
utils/: __init__.py  config.py  data_parser.py  download_wiki_data.py  markdown_processor.py  text_processor.py
(+41 files in other folders)
