[project]
name = "mcp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pathlib2>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
